--- a/README.org
+++ b/README.org
@@ -24,6 +24,8 @@ No package workarounds are turned on by default, nor will I include such things 
 
 Nonetheless, it would be possible to provide workarounds as an overlay from a separate repository.
 If this project turns out to be viable, I will do that.
+** Related projects
+[[https://github.com/akirak/twist.el][Twist.el]] is a work-in-progress Emacs frontend to Twist.
 ** Examples
 - I am preparing [[https://github.com/akirak/emacs-twist-examples][a repository of configuration examples]].
 - The author's [[https://github.com/akirak/nix-config][nix-config]] repository uses Twist.
