--- a/README.org
+++ b/README.org
@@ -26,6 +26,8 @@ Nonetheless, it would be possible to provide workarounds as an overlay from a se
 If this project turns out to be viable, I will do that.
 ** Related projects
 [[https://github.com/akirak/twist.el][Twist.el]] is a work-in-progress Emacs frontend to Twist.
+It is just a little fancy wrapper, and its use is optional.
+You can build a configuration without twist.el, and a configuration built with Twist doesn't require Twist.el to run.
 ** Examples
 - I am preparing [[https://github.com/akirak/emacs-twist-examples][a repository of configuration examples]].
 - The author's [[https://github.com/akirak/nix-config][nix-config]] repository uses Twist.
