--- a/doc/emacs-twist.org
+++ b/doc/emacs-twist.org
@@ -1,3 +1,4 @@
+# -*- org-id-link-to-org-use-id: use-existing; -*-
 #+TITLE: Emacs Twist User Documentation
 #+TEXINFO_DIR_CATEGORY: Emacs
 #+TEXINFO_DIR_TITLE: Twist: (emacs-twist)
